--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Dashboards</title>
 
     <script type="text/javascript"
-	    src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
+	    src="https://public.tableau.com/app/profile/raveenaa.deenadayalan/hidden"></script>
     <script type="text/javascript"></script>
 
 </head>
